--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -6,15 +6,13 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: write   # necesario para crear un Release
+  contents: write
 
 jobs:
   build:
     runs-on: ubuntu-22.04
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Set up Java 17 (Temurin)
         uses: actions/setup-java@v4
@@ -37,6 +35,7 @@ jobs:
       - name: Create local.properties (point SDK)
         run: echo "sdk.dir=$ANDROID_SDK_ROOT" > local.properties
 
+      # 🔐 Decode keystore desde el secret
       - name: Decode keystore
         run: |
           mkdir -p app
@@ -44,21 +43,42 @@ jobs:
           | tr -d '\r\n[:space:]' \
           | base64 -d > app/freyja-release.p12
 
-      - name: Inject signing props
+      # 📜 Configura gradle.properties con flags y secrets
+      - name: Write gradle.properties
         run: |
-          {
-            echo "RELEASE_STORE_FILE=app/freyja-release.p12"
-            echo "RELEASE_STORE_PASSWORD=${{ secrets.ANDROID_KEYSTORE_PASSWORD }}"
-            echo "RELEASE_KEY_ALIAS=${{ secrets.ANDROID_KEY_ALIAS }}"
-            echo "RELEASE_KEY_PASSWORD=${{ secrets.ANDROID_KEY_PASSWORD }}"
-          } >> gradle.properties
+          cat > gradle.properties <<'EOF'
+          org.gradle.jvmargs=-Xmx4g -Dfile.encoding=UTF-8
+          android.useAndroidX=true
+          android.enableJetifier=true
+          kotlin.code.style=official
+          android.nonTransitiveRClass=true
 
+          RELEASE_STORE_FILE=freyja-release.p12
+          RELEASE_STORE_PASSWORD=${ANDROID_KEYSTORE_PASSWORD}
+          RELEASE_KEY_ALIAS=${ANDROID_KEY_ALIAS}
+          RELEASE_KEY_PASSWORD=${ANDROID_KEY_PASSWORD}
+          EOF
+
+      # 🏗️ Build Release APK firmado
       - name: Build release APK (signed)
         run: ./gradlew --no-daemon :app:assembleRelease
 
+      # 📦 Sube artefacto firmado
       - name: Upload signed APK
         uses: actions/upload-artifact@v4
         with:
           name: app-release-signed
           path: app/build/outputs/apk/release/*.apk
           if-no-files-found: error
+
+      # 🎁 Crear GitHub Release con el APK firmado
+      - name: Create GitHub Release
+        if: github.ref == 'refs/heads/main'
+        uses: softprops/action-gh-release@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          tag_name: build-${{ github.run_number }}.${{ github.run_attempt }}
+          name: "Freyja Release ${{ github.run_number }}"
+          make_latest: true
+          generate_release_notes: true
+          files: app/build/outputs/apk/release/*.apk
